# bountyproof-mcp

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  opencode.jsonc.example  pyproject.toml
.github/workflows/: test.yml
.opencode/commands/: bounty-start.md
src/bountyproof_mcp/: __init__.py  auth.py  config.py  engine.py  models.py  origin.py  pipeline.py  probe.py  scope.py  server.py  session.py  storage.py  surface.py
tests/: test_auth.py  test_engine.py  test_origin.py  test_pipeline.py  test_probe.py  test_scope.py  test_session.py  test_surface.py
